# savant

./: .gitignore  README.md
agent/: .cursorrules  .env.example  pyproject.toml
agent/src/: simple-agent.py
app/: docker-compose.yml
app/backend/: .gitignore  Dockerfile  __init__.py  app.py  conftest.py  requirements.txt  setup.py  test_app.py
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
app/frontend/src/: App.svelte  app.css  env.d.ts  main.ts
app/frontend/src/lib/: api.ts  auth.ts  utils.ts
app/frontend/src/lib/components/: Modal.svelte  NewRequestButton.svelte  RequestDetails.svelte  StatusDropdown.svelte
app/frontend/src/routes/: LiveFeed.svelte  Login.svelte  Pricing.svelte  Profile.svelte  RequestDetailsPage.svelte  UserRequests.svelte
report-analyzer/: .gitignore  README.md  main.py  requirements.txt
