[project]
name = "tree-sitter-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "ruff>=0.9.3",
    "openai>=1.60.2",
]


[tool.ruff]
line-length = 128
target-version = "py312"
lint.select = ["E", "F", "B"]

[tool.uv.sources]
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity.git" }

[tool.pytest.ini_options]
pythonpath = ["."]
